--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
-<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<html lang="ko" 
+	  xmlns:th="http://www.thymeleaf.org"
+	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  layout:decorate="~{layout/layout}">
 <head>
     <meta charset="UTF-8">
-    <title>diary main</title>
+    <title>main</title>
+	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
-    <script th:inline="javascript">
-        
-    </script>
+	
+	<script type="text/javascript" th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
+    <script th:inline="javascript"></script>
 </head>
 <body>
-<h1>index</h1>
-	<div>index페이지</div>
+	<div layout:fragment="content">
+		<h1>index</h1>
+		<div>index페이지</div>
+	</div>
 </body>
 </html>
