--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Spring boot</title>
+<!-- <th:block th:replace="~{fragments/head :: headFragment}"></th:block> -->
+ <head>
+	<meta charset="UTF-8">
+    <title>Family Diary</title>
+	<!-- @는 주소를 의미, url에 변수 사용시 || 추가 -->
+	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
+	<!--<link rel="stylesheet" th:href="@{/css/main.css}">-->
+	<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
+	<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 </head>
 <body>
 	<!-- <div>header</div> -->
