--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,13 +1,14 @@
 <nav th:fragment="headerFragment" class="navbar navbar-expand-sm navbar-dark bg-dark">
+<!--  <div class="container-fluid"> -->
   <div class="container-fluid">
     <a class="navbar-brand" href="javascript:void(0)">Logo</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="mynavbar">
-      <ul class="navbar-nav me-auto">
+	<div class="collapse navbar-collapse justify-content-center" id="mynavbar">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
+          <a class="nav-link" href="/diary/reg">다이어리 등록</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)">Link</a>
@@ -16,10 +17,12 @@
           <a class="nav-link" href="javascript:void(0)">Link</a>
         </li>
       </ul>
+	  <!--
       <form class="d-flex">
         <input class="form-control me-2" type="text" placeholder="Search">
         <button class="btn btn-primary" type="button">Search</button>
       </form>
+	  -->
     </div>
   </div>
 </nav>
