--- a/src/main/resources/templates/page/diary/DiaryMain.html
+++ b/src/main/resources/templates/page/diary/DiaryMain.html
@@ -52,7 +52,7 @@
 				</tbody>
 			</table>
 		</div>
-		<script th:src="@{/webjars/requirejs/2.3.6/require.min.js}" data-main="js/page/diary/DiaryMain"></script>
+		<script th:src="@{/webjars/requirejs/2.3.6/require.min.js}" data-main="/js/page/diary/DiaryMain"></script>
 	</div>
 </body>
 </html>
