--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -8,10 +8,10 @@
 	<div class="collapse navbar-collapse justify-content-center" id="mynavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" href="/diary/reg">다이어리 등록</a>
+          <a class="nav-link" href="/diary">다이어리 메인</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
+          <a class="nav-link" href="/diary/reg">다이어리 등록</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="javascript:void(0)">Link</a>
