--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -7,7 +7,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <title>Family Diary</title>
 	<!-- @는 주소를 의미, url에 변수 사용시 || 추가 -->
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
-	<!--<link rel="stylesheet" th:href="@{/css/main.css}">-->
+	<link rel="stylesheet" th:href="@{/css/main.css}">
 	<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
 	<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 </head>
