--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,5 +1,13 @@
 * {
 	margin: 0 auto;
 	box-sizing: border-box;
-	color: red;
+}
+
+.link-cell {
+	text-decoration: underline;
+	color: cornflowerblue;
+}
+
+.link-cell:hover{
+	cursor: pointer;
 }
