--- a/src/main/resources/templates/page/diary/DiaryMain.html
+++ b/src/main/resources/templates/page/diary/DiaryMain.html
@@ -47,9 +47,7 @@
 					    <th>Modi At</th>
 					 </tr>
 				</thead>
-				<tbody>
-	
-				</tbody>
+				<tbody></tbody>
 			</table>
 		</div>
 		<script th:src="@{/webjars/requirejs/2.3.6/require.min.js}" data-main="/js/page/diary/DiaryMain"></script>
