--- a/src/main/resources/templates/page/diary/DiaryForm.html
+++ b/src/main/resources/templates/page/diary/DiaryForm.html
@@ -25,7 +25,9 @@
 					<textarea class="form-control" id="diaryContent" name="diaryContent" rows="3"></textarea>
 				</div>
 			</form>
-			<button type="submit" class="btn btn-primary" id="regBtn" name="regBtn">등록하기</button>
+			<button type="button" class="btn btn-primary" id="listBtn" name="listBtn">목록</button>
+			<button type="button" class="btn btn-primary" id="regBtn" name="regBtn">등록</button>
+			<button type="button" class="btn btn-primary visible" id="deleteBtn" name="deleteBtn">삭제</button>
 		</div>
 		<script th:inline="javascript">
 			let diaryDto = [[${diaryDto}]];
