--- a/src/main/resources/templates/page/diary/DiaryForm.html
+++ b/src/main/resources/templates/page/diary/DiaryForm.html
@@ -17,6 +17,9 @@
 			<h1>다이어리 쓰기</h1>
 			<form id="diaryRegForm">
 				<div class="mb-3">
+					<input type="hidden" class="form-control" id="diaryId" name="diaryId">
+				</div>
+				<div class="mb-3">
 					<label for="diaryTitle" class="form-label">제목</label>
 					<input type="text" class="form-control" id="diaryTitle" name="diaryTitle">
 				</div>
