--- a/src/main/resources/templates/page/diary/DiaryMain.html
+++ b/src/main/resources/templates/page/diary/DiaryMain.html
@@ -43,11 +43,11 @@
 						<th>Id</th>
 					    <th>Title</th>
 					    <th>Content</th>
-					    <th>Modi User</th>
-					    <th>Modi At</th>
+					    <th>ModiUser</th>
+					    <th>ModiAt</th>
 					 </tr>
 				</thead>
-				<tbody></tbody>
+				<tbody id="diaryTbody"></tbody>
 			</table>
 		</div>
 		<script th:src="@{/webjars/requirejs/2.3.6/require.min.js}" data-main="/js/page/diary/DiaryMain"></script>
