--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -1,35 +1,15 @@
-<footer th:fragment="footerFragment" class="py-5">
-    <div class="row">
-      <div class="col-6 col-md-2 mb-3">
-        <h5>Section</h5>
-        <ul class="nav flex-row">
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Home</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Features</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">Pricing</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">FAQs</a></li>
-          <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-body-secondary">About</a></li>
-        </ul>
-      </div>
-
-      <div class="col-md-5 offset-md-1 mb-3">
-        <form>
-          <h5>Subscribe to our newsletter</h5>
-          <p>Monthly digest of what's new and exciting from us.</p>
-          <div class="d-flex flex-column flex-sm-row w-100 gap-2">
-            <label for="newsletter1" class="visually-hidden">Email address</label>
-            <input id="newsletter1" type="text" class="form-control" placeholder="Email address">
-            <button class="btn btn-primary" type="button">Subscribe</button>
-          </div>
-        </form>
-      </div>
+<footer th:fragment="footerFragment" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+	<div class="col-md-2 d-flex align-items-center">
+    	<a class="text-muted" href="#" >
+        	<img class="bi bi-github" th:src="@{/assets/icon/github.svg}"></img>
+      	</a>
+	    <span class="text-muted">© 2024 Family Diary, Inc</span>
     </div>
+    <ul class="nav justify-content-end list-unstyled d-flex">
+    	<li class="ms-3"><a class="text-muted" href="#"><img class="me-3 bi bi-github" th:src="@{/assets/icon/github.svg}"></img></a></li>
+    	<li class="ms-3"><a class="text-muted" href="#"><img class="me-3 bi bi-envelope-at-fill" th:src="@{/assets/icon/envelope-at-fill.svg}"></img></a></li>
+		<li class="ms-3"><a class="text-muted" href="#"><img class="bi bi-arrow-up" th:src="@{/assets/icon/arrow-up.svg}"></img></a></li>
+    </ul>
+	<div class="ms-3"><a class="btn btn-lg btn-primary btn-lg-square back-to-top" href="#" ><img class="bi bi-arrow-up" th:src="@{/assets/icon/arrow-up.svg}"></img></a></div>
+</footer>
 
-    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
-      <p>© 2024 Company, Inc. All rights reserved.</p>
-      <ul class="list-unstyled d-flex">
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="link-body-emphasis" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-      </ul>
-    </div>
-  </footer>
