--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,30 +1,20 @@
-<nav th:fragment="headerFragment" class="navbar navbar-expand-sm navbar-dark bg-dark">
-<!--  <div class="container-fluid"> -->
-  <div class="container-fluid">
-    <a class="navbar-brand" href="javascript:void(0)">Logo</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-	<div class="collapse navbar-collapse justify-content-center" id="mynavbar">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/diary">다이어리 메인</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/diary/reg">다이어리 등록</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="javascript:void(0)">Link</a>
-        </li>
-      </ul>
-	  <!--
-      <form class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Search">
-        <button class="btn btn-primary" type="button">Search</button>
-      </form>
-	  -->
-    </div>
-  </div>
-</nav>
+<header th:fragment="headerFragment" class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  	<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+	    <h3 class="text-primary m-0">
+			<img class="me-3 bi bi-github" th:src="@{/assets/icon/github.svg}" />
+			Family Diary
+		</h3>
+  	</a>
 
+	<ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
+    	<li><a href="/" class="nav-link px-2 link-secondary">홈</a></li>
+    	<li><a href="/diary" class="nav-link px-2 link-dark">다이어리 목록</a></li>
+    	<li><a href="/diary/reg" class="nav-link px-2 link-dark">다이어리 쓰기</a></li>
+  	</ul>
+
+  	<div class="col-md-3 text-end">
+    	<button type="button" class="btn btn-outline-primary me-2">Login</button>
+    	<button type="button" class="btn btn-primary">Sign-up</button>
+  	</div>
+</header>
 
