--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -1,21 +1,39 @@
+<!-- 
+######################################################################
+# Filename : main.html
+# Description : 홈페이지 메인
+# author : KSH
+# since : 2024.06.05
+######################################################################
+-->
 <!DOCTYPE html>
 <html lang="ko" 
 	  xmlns:th="http://www.thymeleaf.org"
 	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
 	  layout:decorate="~{layout/layout}">
-<head>
-    <meta charset="UTF-8">
-    <title>main</title>
-	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
-	<link rel="stylesheet" type="text/css" href="/css/main.css">
-	
-	<script type="text/javascript" th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
-    <script th:inline="javascript"></script>
-</head>
 <body>
 	<div layout:fragment="content">
-		<h1>index</h1>
-		<div>index페이지</div>
+		<div class="p-5 mb-4 bg-light rounded-3">
+	    	<div class="container-fluid py-5">
+	        	<h1 class="display-5 fw-bold">Custom jumbotron</h1>
+	        	<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+	        	<button class="btn btn-primary btn-lg" type="button">Example button</button>
+	      	</div>
+	    </div>
+		<div class="p-5 mb-4 bg-light rounded-3">
+	    	<div class="container-fluid py-5">
+	        	<h1 class="display-5 fw-bold">Custom jumbotron</h1>
+	        	<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+	        	<button class="btn btn-primary btn-lg" type="button">Example button</button>
+	      	</div>
+	    </div>
+		<div class="p-5 mb-4 bg-light rounded-3">
+	    	<div class="container-fluid py-5">
+	        	<h1 class="display-5 fw-bold">Custom jumbotron</h1>
+	        	<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+	        	<button class="btn btn-primary btn-lg" type="button">Example button</button>
+	      	</div>
+	    </div>		
 	</div>
 </body>
 </html>
