--- a/src/main/resources/templates/fragment/footer.html
+++ b/src/main/resources/templates/fragment/footer.html
@@ -1,15 +1,16 @@
-<footer th:fragment="footerFragment" class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-	<div class="col-md-2 d-flex align-items-center">
-    	<a class="text-muted" href="#" >
-        	<img class="bi bi-github" th:src="@{/assets/icon/github.svg}"></img>
-      	</a>
-	    <span class="text-muted">© 2024 Family Diary, Inc</span>
+<!-- Footer Start -->
+<footer th:fragment="footerFragment" class="container-fluid bg-dark text-body footer mt-5 px-0 wow fadeIn" data-wow-delay="0.1s">
+    <div class="container-fluid copyright">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
+                    &copy; <a href="#">Family Diary</a>, To be Positive
+                </div>
+            </div>
+        </div>
     </div>
-    <ul class="nav justify-content-end list-unstyled d-flex">
-    	<li class="ms-3"><a class="text-muted" href="#"><img class="me-3 bi bi-github" th:src="@{/assets/icon/github.svg}"></img></a></li>
-    	<li class="ms-3"><a class="text-muted" href="#"><img class="me-3 bi bi-envelope-at-fill" th:src="@{/assets/icon/envelope-at-fill.svg}"></img></a></li>
-		<li class="ms-3"><a class="text-muted" href="#"><img class="bi bi-arrow-up" th:src="@{/assets/icon/arrow-up.svg}"></img></a></li>
-    </ul>
-	<div class="ms-3"><a class="btn btn-lg btn-primary btn-lg-square back-to-top" href="#" ><img class="bi bi-arrow-up" th:src="@{/assets/icon/arrow-up.svg}"></img></a></div>
 </footer>
+<!-- Footer End -->
+
+
 
