--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,20 +1,30 @@
-<header th:fragment="headerFragment" class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-  	<a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-	    <h3 class="text-primary m-0">
-			<img class="me-3 bi bi-github" th:src="@{/assets/icon/github.svg}" />
-			Family Diary
-		</h3>
-  	</a>
-
-	<ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-    	<li><a href="/" class="nav-link px-2 link-secondary">홈</a></li>
-    	<li><a href="/diary" class="nav-link px-2 link-dark">다이어리 목록</a></li>
-    	<li><a href="/diary/reg" class="nav-link px-2 link-dark">다이어리 쓰기</a></li>
-  	</ul>
-
-  	<div class="col-md-3 text-end">
-    	<button type="button" class="btn btn-outline-primary me-2">Login</button>
-    	<button type="button" class="btn btn-primary">Sign-up</button>
-  	</div>
-</header>
-
+<!-- Navbar Start -->
+<nav th:fragment="headerFragment" class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+    <a th:href="@{/}" class="navbar-brand ms-4 ms-lg-0">
+        <h1 class="text-primary m-0"><img class="me-3" th:src="@{/img/icons/icon-1.png}" alt="Icon">Family Diary</h1>
+    </a>
+    <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarCollapse">
+        <div class="navbar-nav ms-auto p-4 p-lg-0">
+            <a th:href="@{/}" class="nav-item nav-link active">Home</a>
+            <a th:href="@{/diary}" class="nav-item nav-link">Diary</a>
+            <a th:href="@{/diary/reg}" class="nav-item nav-link">Diary Write</a>
+            <div class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                <div class="dropdown-menu border-0 m-0">
+                    <a href="#" class="dropdown-item">Our Features</a>
+                    <a href="#" class="dropdown-item">Our Projects</a>
+                    <a href="#" class="dropdown-item">Team Members</a>
+                    <a href="#" class="dropdown-item">Appointment</a>
+                    <a href="#" class="dropdown-item">Testimonial</a>
+                    <a href="#" class="dropdown-item">404 Page</a>
+                </div>
+            </div>
+            <a href="#" class="nav-item nav-link">Contact</a>
+        </div>
+        <a href="#" class="btn btn-primary py-2 px-4 d-none d-lg-block">Appointment</a>
+    </div>
+</nav>
+<!-- Navbar End -->
