--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -1,40 +1,65 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
 xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<!-- <th:block th:replace="~{fragments/head :: headFragment}"></th:block> -->
- <head>
+<head>
 	<meta charset="UTF-8">
     <title>Family Diary</title>
+	<meta content="width=device-width, initial-scale=1.0" name="viewport">
+    <meta content="" name="keywords">
+    <meta content="" name="description">
 	
 	<!-- Favicon -->
     <link th:href="@{/img/favicon.ico}" rel="icon">
 	
+	<!-- Google Web Fonts -->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600&family=Teko:wght@400;500;600&display=swap" rel="stylesheet">
+
+	<!-- Icon Font Stylesheet -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+
+	<!-- Libraries Stylesheet -->
+	<link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
+	
 	<!-- Bootstrap -->
 	<!-- @는 주소를 의미, url에 변수 사용시 || 추가 -->
-	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
+	<!-- <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" /> -->
+	
+	<!-- Customized Bootstrap Stylesheet -->
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}" >
 	
 	<!-- Custom -->
-	<link rel="stylesheet" th:href="@{/css/main.css}">
-
-    <!-- Google Web Fonts -->
-
-    <!-- Icon Font Stylesheet -->
-	<link rel="stylesheet" th:href="@{/css/bootstrap-icons-1.11.3/bootstrap-icons.css}">
+	<link rel="stylesheet" th:href="@{/css/style.css}">
 	
-	<!-- JS Bootstrap -->	
+	<!-- JavaScript Libraries -->
 	<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
-	
-	<!-- JS Jquery -->
+	<script th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js}" crossorigin="anonymous"></script>
 	<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 </head>
 <body>
-	<!-- <div>header</div> -->
+	<!-- Spinner Start -->
+    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
+        <img class="position-absolute top-50 start-50 translate-middle" th:href="@{/img/icons/icon-1.png}" alt="Icon">
+    </div>
+    <!-- Spinner End -->
+	
+	<!-- <div>header-nav</div> -->
 	<nav th:replace="~{fragment/header :: headerFragment}"></nav>
 	
-	<!-- main  -->
+	<!-- <div>content</div> -->
 	<th:block layout:fragment="content" class="content"></th:block>
 	
 	<!-- <div>footer</div> -->
 	<footer th:replace="~{fragment/footer :: footerFragment}"></footer>
+	
+	<!-- Back to Top -->
+	<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
+
+    <!-- main Javascript -->
+    <script th:src="@{/js/main.js}"></script>
 </body>
+
 </html>
