--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -7,33 +7,153 @@
 ######################################################################
 -->
 <!DOCTYPE html>
-<html lang="ko" 
-	  xmlns:th="http://www.thymeleaf.org"
-	  xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-	  layout:decorate="~{layout/layout}">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	layout:decorate="~{layout/layout}">
+
 <body>
 	<div layout:fragment="content">
+		
+		<!-- Carousel Start -->
+		<div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
+			<div class="carousel-indicators">
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active"
+					aria-current="true" aria-label="Slide 1"></button>
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+				<button type="button" data-bs-target="#myCarousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+			</div>
+			<div class="carousel-inner">
+				<div class="carousel-item active">
+					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{img/carousel-3.jpg}" alt=""
+						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+					<rect width="100%" height="100%" fill="#777" /></img>
+
+					<div class="container">
+						<div class="carousel-caption text-start">
+							<h1>Example headline.</h1>
+							<p>Some representative placeholder content for the first slide of the carousel.</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{img/carousel-2.jpg}" alt=""
+						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+					<rect width="100%" height="100%" fill="#777" /></img>
+
+					<div class="container">
+						<div class="carousel-caption">
+							<h1>Another example headline.</h1>
+							<p>Some representative placeholder content for the second slide of the carousel.</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
+						</div>
+					</div>
+				</div>
+				<div class="carousel-item">
+					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{img/carousel-1.jpg}" alt=""
+						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
+					<rect width="100%" height="100%" fill="#777" /></img>
+
+					<div class="container">
+						<div class="carousel-caption text-end">
+							<h1>One more for good measure.</h1>
+							<p>Some representative placeholder content for the third slide of this carousel.</p>
+							<p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
+						</div>
+					</div>
+				</div>
+			</div>
+			<button class="carousel-control-prev" type="button" data-bs-target="#myCarousel" data-bs-slide="prev">
+				<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Previous</span>
+			</button>
+			<button class="carousel-control-next" type="button" data-bs-target="#myCarousel" data-bs-slide="next">
+				<span class="carousel-control-next-icon" aria-hidden="true"></span>
+				<span class="visually-hidden">Next</span>
+			</button>
+		</div>
+		<!-- Carousel End -->
+		
+		<!-- Jumbotron Start -->
 		<div class="p-5 mb-4 bg-light rounded-3">
-	    	<div class="container-fluid py-5">
-	        	<h1 class="display-5 fw-bold">Custom jumbotron</h1>
-	        	<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-	        	<button class="btn btn-primary btn-lg" type="button">Example button</button>
-	      	</div>
-	    </div>
-		<div class="p-5 mb-4 bg-light rounded-3">
-	    	<div class="container-fluid py-5">
-	        	<h1 class="display-5 fw-bold">Custom jumbotron</h1>
-	        	<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-	        	<button class="btn btn-primary btn-lg" type="button">Example button</button>
-	      	</div>
-	    </div>
-		<div class="p-5 mb-4 bg-light rounded-3">
-	    	<div class="container-fluid py-5">
-	        	<h1 class="display-5 fw-bold">Custom jumbotron</h1>
-	        	<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-	        	<button class="btn btn-primary btn-lg" type="button">Example button</button>
-	      	</div>
-	    </div>		
+			<div class="container-fluid py-5">
+				<h1 class="display-5 fw-bold">Custom jumbotron</h1>
+				<p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one
+					in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it
+					to your liking.</p>
+				<button class="btn btn-primary btn-lg" type="button">Example button</button>
+			</div>
+		</div>
+		<!-- Jumbotron End -->
+
+		<!-- Featurette Start -->
+		<div class="container marketing">
+			<hr class="featurette-divider">
+			<div class="row featurette">
+				<div class="col-md-7">
+					<h2 class="featurette-heading">녀기 <span class="text-muted">육아 6일차 초보아빠</span></h2>
+					<p class="lead">조리원에서 나가면 피자랑 치킨먹어야지</p>
+				</div>
+				<div class="col-md-5">
+					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-1.jpg}"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>녀기</title>
+						<rect width="100%" height="100%" fill="#eee" />
+						<!-- <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text> -->
+					</img>
+				</div>
+			</div>
+			<hr class="featurette-divider">
+			<div class="row featurette">
+				<div class="col-md-7 order-md-2">
+					<h2 class="featurette-heading">지니 <span class="text-muted">육아 6일차 초보엄마</span></h2>
+					<p class="lead">얼른 편하게 앉을 수 있으면 좋겠어요.</p>
+				</div>
+				<div class="col-md-5 order-md-1">
+					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-2.jpg}"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>지니</title>
+						<rect width="100%" height="100%" fill="#eee" />
+						<!-- <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text> -->
+					</img>
+				</div>
+			</div>
+			<hr class="featurette-divider">
+			<div class="row featurette">
+				<div class="col-md-7">
+					<h2 class="featurette-heading">태오 <span class="text-muted">생후 6일차 슈퍼울트라 귀염둥이</span></h2>
+					<p class="lead">그리고 방구쟁이</p>
+				</div>
+				<div class="col-md-5">
+					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-3.jpg}"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>태오</title>
+						<rect width="100%" height="100%" fill="#eee" />
+						<!-- <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text> -->
+					</img>
+				</div>
+			</div>
+			<hr class="featurette-divider">
+			<div class="row featurette">
+				<div class="col-md-7 order-md-2">
+					<h2 class="featurette-heading">태오 <span class="text-muted">귀여우니까 1장더</span></h2>
+					<p class="lead">추가요</p>
+				</div>
+				<div class="col-md-5 order-md-1">
+					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-4.jpg}"
+						preserveAspectRatio="xMidYMid slice" focusable="false">
+						<title>태오</title>
+						<rect width="100%" height="100%" fill="#eee" />
+						<!-- <text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text> -->
+					</img>
+				</div>
+			</div>
+		</div>
+		<!-- Featurette End -->
+		
 	</div>
 </body>
 </html>
