--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -11,6 +11,7 @@
             <a th:href="@{/}" class="nav-item nav-link active">Home</a>
             <a th:href="@{/diary}" class="nav-item nav-link">Diary</a>
             <a th:href="@{/diary/reg}" class="nav-item nav-link">Diary Write</a>
+            <a th:href="@{/diary/diaryFile}" class="nav-item nav-link">Diary File</a>
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                 <div class="dropdown-menu border-0 m-0">
