--- a/src/main/resources/templates/page/diary/DiaryMain.html
+++ b/src/main/resources/templates/page/diary/DiaryMain.html
@@ -26,7 +26,7 @@
 					</div>
 				</div>
 				<div class="col-2 row justify-content-end">
-					<div class="col-5야 .col-sm-1 mb-1">
+					<div class="col-5 .col-sm-1 mb-1">
 						<input type="button" class="btn btn-primary" id="searchBtn" name="searchBtn" value="조회"/>				
 					</div>
 				</div>
