--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -40,10 +40,12 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 </head>
 <body>
 	<!-- Spinner Start -->
+	<!--
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
         <img class="position-absolute top-50 start-50 translate-middle" th:href="@{/img/icons/icon-1.png}" alt="Icon">
     </div>
+	-->
     <!-- Spinner End -->
 	
 	<!-- <div>header-nav</div> -->
@@ -59,7 +61,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
     <!-- main Javascript -->
-    <script th:src="@{/js/main.js}"></script>
+    <!-- <script th:src="@{/js/main.js}"></script> -->
 </body>
 
 </html>
