--- a/src/main/resources/templates/page/diary/DiaryFile.html
+++ b/src/main/resources/templates/page/diary/DiaryFile.html
@@ -14,21 +14,46 @@
 <body>
 	<div layout:fragment="content" class="container">
 		<h1>파일 목록</h1>
-		<input name="uploadFiles" type="file" multiple>
-		    <button class="uploadBtn">Upload</button>
-		    <script>
-		        $('.uploadBtn').click(function() {
-		            var formData = new FormData();
+		<input id="uploadFiles" name="uploadFiles" type="file" multiple>
+	    <button id="uploadBtn" name="uploadBtn">Upload</button>
+		<div id="preview">
+				
+		</div>
+		
+		<div class="album py-5 bg-light">
+	    	<div class="container">
+	    		<div id="diaryMain" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+	    		</div>
+	  		</div>
+  		</div>
+	    <script>
+			$('#uploadFiles').change(function(e) {
+			  	console.log(e);
+			  
+			  	let fileList = e.target.files;
+				let previewTag = $('#preview');
+			  
+			  	for(let i=0; i<fileList.length; i++) {
+					console.log(fileList[i]);
+					let imgTag = document.createElement('img');
+					imgTag.style.width = '400px';
+					imgTag.style.height = '400px';
+					let imgUrl = URL.createObjectURL(fileList[i]);
+					imgTag.setAttribute('src', imgUrl);
+					previewTag.append(imgTag);
+			  	}
+			})
+			
+	        $('#uploadBtn').click(function() {
+				let formData = new FormData();
+	            let inputFile = $("input[type='file']");
+	            let files = inputFile[0].files;
 
-		            var inputFile = $("input[type='file']");
-
-		            var files = inputFile[0].files;
-
-		            for(var i = 0; i < files.length; i++) {
-		                console.log(files[i]);
-		                formData.append("uploadFiles", files[i]);
-		            }
-					
+	            for(let i = 0; i < files.length; i++) {
+	                console.log(files[i]);
+	                formData.append("uploadFiles", files[i]);
+	            };
+				
 				$.ajax({
 		               url: '/diary/uploadFile',
 		               processData: false,
@@ -36,15 +61,40 @@
 		               data: formData,
 		               type: 'put',
 		               dataType: 'json',
-		               success: function(result) {
-		                   console.log(result);
+		               success: function(data) {
+		                   console.log(data);
+						   let fileList = data.result;
+						   let str = '';
+						   $.each(fileList, function(idx, item){
+							console.log(item.filePath)
+							console.log(item.fileName)
+	                          str += '<div class="col">'
+	                          str += '<div class="card shadow-sm">'
+	                          str += '<img class="bd-placeholder-img card-img-top" width="100%" height="225" src="/upload/' + item.filePath + '/' + item.fileName + '" alt=""'
+							  str += 'aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">'
+							  str += '<rect width="100%" height="100%" fill="#55595c">'
+							  str += '</img>' 
+							  str += '<div class="card-body">' 
+							  str += '<p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>' 
+							  str += '<div class="d-flex justify-content-between align-items-center">' 
+							  str += '<div class="btn-group">' 
+							  str += '<button type="button" class="btn btn-sm btn-outline-secondary">View</button>' 
+							  str += '<button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>' 
+							  str += '</div>' 
+							  str += '<small class="text-muted">9 mins</small>' 
+							  str += '</div>' 
+							  str += '</div>' 
+							  str += '</div>' 
+							  str += '</div>' 
+	                      });
+	                      $("#diaryMain").append(str);
 		               },
 		               error: function(jqXHR, textStatus, errorThrown) {
 		                   console.log(textStatus);
 		               }
 		           });
-		        });
-		    </script>
+	        });
+	    </script>
 		<!-- <script th:src="@{/webjars/requirejs/2.3.6/require.min.js}" data-main="/js/page/diary/DiaryMain"></script> -->
 	</div>
 </body>
