--- a/src/main/resources/templates/page/diary/DiaryFile.html
+++ b/src/main/resources/templates/page/diary/DiaryFile.html
@@ -16,10 +16,9 @@
 		<h1>파일 목록</h1>
 		<input id="uploadFiles" name="uploadFiles" type="file" multiple>
 	    <button id="uploadBtn" name="uploadBtn">Upload</button>
-		<div id="preview">
-				
-		</div>
+		<div id="preview"></div>
 		
+		<!-- 목록으로 빼기 -->
 		<div class="album py-5 bg-light">
 	    	<div class="container">
 	    		<div id="diaryMain" class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
