[ feature_7_02 ][spring security]
- security&web config 추가, images로 경로변경, user insert 추가

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -9,7 +9,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
     <meta content="" name="description">
 	
 	<!-- Favicon -->
-    <link th:href="@{/img/favicon.ico}" rel="icon">
+    <link th:href="@{/images/favicon.ico}" rel="icon">
 	
 	<!-- Google Web Fonts -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,7 +43,7 @@ xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 	<!--
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-border position-relative text-primary" style="width: 6rem; height: 6rem;" role="status"></div>
-        <img class="position-absolute top-50 start-50 translate-middle" th:href="@{/img/icons/icon-1.png}" alt="Icon">
+        <img class="position-absolute top-50 start-50 translate-middle" th:href="@{/images/icons/icon-1.png}" alt="Icon">
     </div>
 	-->
     <!-- Spinner End -->
