--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,7 +1,7 @@
 <!-- Navbar Start -->
 <nav th:fragment="headerFragment" class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
     <a th:href="@{/}" class="navbar-brand ms-4 ms-lg-0">
-        <h1 class="text-primary m-0"><img class="me-3" th:src="@{/img/icons/icon-1.png}" alt="Icon">Family Diary</h1>
+        <h1 class="text-primary m-0"><img class="me-3" th:src="@{/images/icons/icon-1.png}" alt="Icon">Family Diary</h1>
     </a>
     <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
