--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -23,7 +23,7 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{img/carousel-3.jpg}" alt=""
+					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{/images/carousel-3.jpg}" alt=""
 						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
 						<rect width="100%" height="100%" fill="#777" /></img>
 
@@ -36,7 +36,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{img/carousel-2.jpg}" alt=""
+					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{/images/carousel-2.jpg}" alt=""
 						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
 					<rect width="100%" height="100%" fill="#777" /></img>
 
@@ -49,7 +49,7 @@
 					</div>
 				</div>
 				<div class="carousel-item">
-					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{img/carousel-1.jpg}" alt=""
+					<img class="bd-placeholder-img" width="100%" height="500px" th:src="@{/images/carousel-1.jpg}" alt=""
 						aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false">
 					<rect width="100%" height="100%" fill="#777" /></img>
 
@@ -95,7 +95,7 @@
 				</div>
 				<div class="col-md-5">
 					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-1.jpg}"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/images/team-1.jpg}"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
 						<title>녀기</title>
 						<rect width="100%" height="100%" fill="#eee" />
@@ -111,7 +111,7 @@
 				</div>
 				<div class="col-md-5 order-md-1">
 					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-2.jpg}"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/images/team-2.jpg}"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
 						<title>지니</title>
 						<rect width="100%" height="100%" fill="#eee" />
@@ -127,7 +127,7 @@
 				</div>
 				<div class="col-md-5">
 					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-3.jpg}"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/images/team-3.jpg}"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
 						<title>태오</title>
 						<rect width="100%" height="100%" fill="#eee" />
@@ -143,7 +143,7 @@
 				</div>
 				<div class="col-md-5 order-md-1">
 					<img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500"
-						role="img" aria-label="Placeholder: 500x500" th:src="@{/img/team-4.jpg}"
+						role="img" aria-label="Placeholder: 500x500" th:src="@{/images/team-4.jpg}"
 						preserveAspectRatio="xMidYMid slice" focusable="false">
 						<title>태오</title>
 						<rect width="100%" height="100%" fill="#eee" />
