[ feature_7_04 ][spring security]
- 회원가입 중복체크 추가

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -29,6 +29,10 @@ h6,
     font-weight: 400 !important;
 }
 
+img {
+	object-fit: cover;
+}
+
 .back-to-top {
     position: fixed;
     display: none;
