--- a/src/main/resources/templates/page/login/loginForm.html
+++ b/src/main/resources/templates/page/login/loginForm.html
@@ -7,12 +7,14 @@
 ######################################################################
 -->
 <!DOCTYPE html>
-<html>
+<html lang="ko"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
+	<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 </head>
 <body>
 	<div class="container my-3">
@@ -21,8 +23,8 @@
 			<div class="alert alert-danger">사용자ID 또는 비밀번호를 확인해 주세요.</div>
 		</div>
 		<div class="mb-3">
-			<label for="username" class="form-label">사용자ID</label>
-			<input type="text" name="username" id="username" class="form-control">
+			<label for="userId" class="form-label">사용자ID</label>
+			<input type="text" name="userId" id="userId" class="form-control">
 		</div>
 		<div class="mb-3">
 			<label for="password" class="form-label">비밀번호</label>
@@ -31,5 +33,9 @@
 			<button type="submit" class="btn btn-primary">로그인</button>
 		</form>
 	</div>
+	<script th:inline="javascript">
+		//let diaryDto = [[${diaryDto}]] || {};
+	</script>
+	<script th:src="@{/webjars/requirejs/2.3.6/require.min.js}" data-main="/js/page/login/LoginForm"></script>
 </body>
 </html>
