[ feature_7_05 ][spring security]
- 회원가입폼 디자인 수정
- 로그인폼 디자인 수정
- 커스텀유저디테일 생성자 주입 롬복사용
- 회원 가입 로직 수정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -555,3 +555,11 @@ img {
 .footer .copyright a:hover {
     color: var(--primary);
 }
+
+/* 가운데 정렬 Wrapper */
+.centerWrapper {
+		display: flex;
+	    flex-direction: column;
+	    flex-wrap: wrap;
+	    align-content: center;
+	}
