--- a/src/main/resources/templates/page/login/loginForm.html
+++ b/src/main/resources/templates/page/login/loginForm.html
@@ -13,25 +13,28 @@
 	<meta charset="UTF-8">
 	<title>Insert title here</title>
 	<link rel="stylesheet" th:href="@{/webjars/bootstrap/5.3.3/css/bootstrap.min.css}" />
+	<link rel="stylesheet" th:href="@{/css/style.css}" />
 	<script type="text/javascript" th:src="@{/webjars/bootstrap/5.3.3/js/bootstrap.min.js}"></script>
 	<script th:src="@{/webjars/jquery/3.5.1/jquery.min.js}"></script>
 </head>
 <body>
-	<div class="container my-3">
-		<form th:action="@{/login}" method="post">
-		<div th:if="${param.error}">
-			<div class="alert alert-danger">사용자ID 또는 비밀번호를 확인해 주세요.</div>
+	<div class="centerWrapper">
+		<div class="w-25 p-3">
+			<form th:action="@{/login}" method="post">
+			<div th:if="${param.error}">
+				<div class="alert alert-danger">사용자ID 또는 비밀번호를 확인해 주세요.</div>
+			</div>
+			<div class="mb-3">
+				<label for="userId" class="form-label">사용자ID</label>
+				<input type="text" name="userId" id="userId" class="form-control">
+			</div>
+			<div class="mb-3">
+				<label for="password" class="form-label">비밀번호</label>
+				<input type="password" name="password" id="password" class="form-control">
+			</div>
+				<button type="submit" class="btn btn-primary">로그인</button>
+			</form>
 		</div>
-		<div class="mb-3">
-			<label for="userId" class="form-label">사용자ID</label>
-			<input type="text" name="userId" id="userId" class="form-control">
-		</div>
-		<div class="mb-3">
-			<label for="password" class="form-label">비밀번호</label>
-			<input type="password" name="password" id="password" class="form-control">
-		</div>
-			<button type="submit" class="btn btn-primary">로그인</button>
-		</form>
 	</div>
 	<script th:inline="javascript">
 		//let diaryDto = [[${diaryDto}]] || {};
