[ feature_12_06 ][gmail smtp]
- 1. 회원가입폼 변경
- 2. 인증메일 전송 타이머 추가

--- a/src/main/resources/templates/page/user/signupForm.html
+++ b/src/main/resources/templates/page/user/signupForm.html
@@ -32,13 +32,19 @@
 				<div class="mb-3">
 					<label for="email" class="form-label">이메일</label>
 					<input type="email" id="email" name="email" class="form-control">
+					<button id="authBtn" name="authBtn" class="btn btn-primary mt-3">이메일인증전송</button>
 				</div>
-				<button id="authBtn" name="authBtn" class="btn btn-primary">이메일 인증</button>
 				<div class="mb-3" invisible>
 					<label for="authCode" class="form-label">인증코드</label>
-					<input type="text" id="authCode" name="authCode" class="form-control">
+					<div class="d-flex flex-row">
+						<input type="text" id="authCode" name="authCode" class="form-control">
+						<div id="timer" name="timer" class="form-control">3:00</div>
+					</div>
+					<button id="authFinishBtn" name="authFinishBtn" class="btn btn-primary mt-3" disabled>인증완료</button>
 				</div>
-				<button id="regBtn" name="regBtn" class="btn btn-primary" disabled>회원가입</button>
+				<div class="mb-3">
+					<button id="regBtn" name="regBtn" class="btn btn-primary w-100" disabled>회원가입</button>
+				</div>
 			</div>
 		</div>
 		<script th:inline="javascript">
